[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "master"
path = "master.rs"

[[bin]]
name = "worker"
path = "worker.rs"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
fd-queue = {git = "https://github.com/flickpp/fd-queue.git", rev = "d076627ccc24eaaf49b06113c46b5ef2abf37a16", features = ["mio", "mio-fd"]}
hex = "0.4.3"
libc = "0.2.140"
mio = {version = "0.8.6", features = ["net", "os-poll", "os-ext"]}
ndjsonlogger = "0.1.0"
ndjsonloggercore = {version = "0.1.0", features = ["std", "isotimestamp"]}
protocol = {path="../protocol"}
pyo3 = {version = "0.18.2", features=["auto-initialize"]}
rand = "0.8.5"
serde = {version = "1.0.158", features=["derive"]}
serde_json = "1.0.94"
